today's and month's concerts

--- a/week_4/Day5/concert/app/assets/stylesheets/concertnets.scss
+++ b/week_4/Day5/concert/app/assets/stylesheets/concertnets.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the concertnets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main {
+	float:left;
+	// padding-right:200px;
+	margin: 0 200px 0 30px;
+}
+.month_concert{
+	float:right;
+
+}
