Users comments to a concert

--- a/week_4/Day5/concert/app/assets/stylesheets/concertnets.scss
+++ b/week_4/Day5/concert/app/assets/stylesheets/concertnets.scss
@@ -4,10 +4,8 @@
 
 .main {
 	float:left;
-	// padding-right:200px;
-	margin: 0 200px 0 30px;
+	margin: 0 200px 0 80px;
 }
-.month_concert{
-	float:right;
-
+.month_concerts{
+	float:left;
 }
