Validations for description field

--- a/week_2/Day4/Blog/views/create_post.erb
+++ b/week_2/Day4/Blog/views/create_post.erb
@@ -1,11 +1,9 @@
 <h3> Please fill the information bellow to create a post: </h3>	
 
 
-<form action="user_input" method="POST">
-  Post'title: <input type="text" name="title" placeholder="Type the title"><br><br>
+ <form action="new_post?" method="POST"> 
+  Post'title: <input type="text" name="title" placeholder="Type the title">
   Post'text: <input type="text" name="text" placeholder="Type the text"><br><br>
-  <button type="submit" name="createPost">Submit</button><br><br>
-  <a href="/tasks" name="home">HOME</a>
+  <button type="submit" name="createPost">Submit</button></a>
 </form>
-
- 
+<a href="/post_titles"><button type="submit" name="home">home</button></a>
