--- a/week_4/Day1/timetracking/app/views/projects/index.html.erb
+++ b/week_4/Day1/timetracking/app/views/projects/index.html.erb
@@ -8,6 +8,11 @@
 				<%#end%>
 			  <% end %>
 			  <a href="projects/<%= project.id %>/edit">Edit</a> 
-			 
+			  <!-- <a href="projects/<%= project.id %>">Delete</a>  -->
+
+			  <!-- To add a message before deleting. This create for me a method and the href addres for the link of the delete. -->
+			  <%= link_to('Delete', project_path(project), method: :delete, data: { confirm: "Are you sure you want to delete this project?" }) %> 
+			  <!-- #, confirm: 'Are you sure you want to delete this project?') -->
+
 		<% end %> 
 	</ul>
