List post with Show, Edit and Destroy links

--- a/final_project/art_project/app/views/posts/new.html.erb
+++ b/final_project/art_project/app/views/posts/new.html.erb
@@ -1,30 +1,3 @@
 <h1>Create new Project</h1>
 
-<%=form_for @post do |form|%>
-	<p>
-		<%=form.label :title%>
-		<%=form.text_field :title%>
-	</p>
-		<!-- Print message in case title is blank -->
-	<%if @post.errors[:title].any?%>
-		<p class='error_messages'>
-			The given title <%=@post.errors[:title].to_sentence%>
-		</p>
-	<% end%>
-
-	<p>
-		<%=form.label :content%>
-		<%=form.text_area :content%>
-	</p>
-		<!-- Print message in case title is blank -->
-	<%if @post.errors[:content].any?%>
-		<p class='error_messages'>
-			The given content <%=@post.errors[:content].to_sentence%>
-		</p>
-	<% end%>
-
-	<p class='form_buttom'>
-		<%=form.submit "Create Post"%>
-	</p>
-	
-<% end%>
+<%= render 'form' %>
