--- a/final_project/art_project/app/views/posts/index.html.erb
+++ b/final_project/art_project/app/views/posts/index.html.erb
@@ -1,10 +1,33 @@
 <h1>List of posts</h1>
 
-<%@list_Posts.each do |post|%>
-	<ul>
-		<li><%=post.title%>
-		<%=post.created_at%>
-		<a href='/posts/new'>Edit</a>
-		<a href='/posts/<%=post.id%>'>Delete</a></li><br>
-	</ul>
-<% end%>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Content</th>
+  </tr>
+ 
+<% @list_Posts.each do |post| %>
+  <tr>
+    <td><%= post.title %></td>
+    <td><%= post.content %></td>
+    <td><%= link_to 'Show', post %></td>
+    <td><%= link_to 'Edit', edit_post_path(post) %></td>
+    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?',
+                                     :method => :delete %></td>
+  </tr>
+<% end %>
+</table>
+ 
+<br />
+ 
+<%= link_to 'New post', new_post_path %>
+
+
+
+
+
+
+
+
+
+
