email and name validations of user model

--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%=@post.title %></h1>
+<%= link_to 'Home page', posts_path %>
 <p>Posted by: Add author here</p>
 <p>On: <%= @post.created_at %></p><br>
 <p><%= @post.content %></p>
+
+
