--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Blog</title>
+  <%= stylesheet_link_tag "application" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+</head>
+<!-- This gray background color is applied for all posts -->
+<body style="background: #EEEEEE;">
+ 
+<%= yield %>
+ 
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
   <title>ArtProject</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%#= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<%#= yield %>
 
 </body>
 </html>
+ -->
