--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <% if user_signed_in?%>
-  <h2>Welcome <%= current_user.first_name %><%= current_user.last_name %>!</h2>
+  <h4>Welcome <%= current_user.first_name%> <%=current_user.last_name%>!</h4>
   <%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %>
 <% else %>
-  <h2>Welcome!. Please log in</h2> 
+  <h4>Welcome!. Please log in</h4> 
   <%= link_to 'Log in',  user_session_path %>
 <% end %><br>
 
@@ -36,9 +36,12 @@
         <td><%= event.description %></td>
         <td><%= event.organizer_name %></td>
         <td><%= event.event_type %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if user_signed_in? %>
+          <td><%= link_to 'Show', event %></td>
+          <td><%= link_to 'Edit', edit_event_path(event) %></td>
+          <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%end%>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -46,4 +49,6 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+ <% if user_signed_in? %>
+  <%= link_to 'New Event', new_event_path %>
+ <% end %>
