Added list of user to be modified by admin

--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<!-- To send a message at log in when password or email aren't invalid -->
+<!-- To send alerts when log in or log out sucessful -->
+<!-- Alert when user or password aren't on database -->
 <div class="notice"><%= flash[:notice] %></div>
 <div class="alert"><%= flash[:alert] %></div>
 
