--- a/final_project/art_project/app/views/events/_form.html.erb
+++ b/final_project/art_project/app/views/events/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.text_area :description %>
   </div>
   <div class="field">
     <%= f.label :organizer_name %><br>
