--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -32,7 +32,8 @@
         <td><%= event.location %></td>
         <td><%= event.start_date %></td>
         <td><%= event.ends_date %></td>
-        <td><%= event.image_url(:thumb) %></td>
+        <!-- Show image resized -->
+        <td><img src='<%= event.image_url(:thumb) %>'></td>
         <td><%= event.description %></td>
         <td><%= event.organizer_name %></td>
         <td><%= event.event_type %></td>
