--- a/final_project/art_project/app/views/users/index.html.erb
+++ b/final_project/art_project/app/views/users/index.html.erb
@@ -1,11 +1,12 @@
 
-<h1>Listing of users:</h1>
+<h1>List of users:</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
+      <th>Action</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,7 +19,7 @@
         <% if user_signed_in? %>
           <td><%= link_to 'Show', user %></td>
           <td><%= link_to 'Edit', edit_user_path(user) %></td>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user from list?' } %>
         <%end%>
         </td>
       </tr>
