--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -52,4 +52,5 @@
 
  <% if user_signed_in? %>
   <%= link_to 'New Event', new_event_path %>
+  <%= link_to 'List of users', users_path %>
  <% end %>
