--- a/final_project/art_project/app/views/users/index.html.erb
+++ b/final_project/art_project/app/views/users/index.html.erb
@@ -17,14 +17,14 @@
         <td><%= user.first_name%></td>
         <td><%= user.email%></td>
         <% if user_signed_in? %>
-          <td><%= link_to 'Show', user %></td>
-          <td><%= link_to 'Edit', edit_user_path(user) %></td>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user from list?' } %>
+          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %>
         <%end%>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= link_to 'New',  new_user_registration_path%>
 
 <br>
