--- a/final_project/art_project/app/views/users/index.html.erb
+++ b/final_project/art_project/app/views/users/index.html.erb
@@ -5,8 +5,6 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Email</th>
-      <th>Action</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,11 +12,12 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.first_name%></td>
-        <td><%= user.email%></td>
-        <% if user_signed_in? %>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %>
-        <%end%>
+        <td><%= user.first_name%><%=" " %><%= user.last_name%></td>
+        <!-- <td><%= user.email%></td> -->
+        
+        <%# if user_signed_in? %>
+          <!-- <td><%#= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %> -->
+        <%# end%>
         </td>
       </tr>
     <% end %>
@@ -26,5 +25,6 @@
 </table>
 
 <%= link_to 'New',  new_user_registration_path%>
+<%= link_to 'Back', events_path%>
 
 <br>
