--- a/final_project/art_project/app/views/users/index.html.erb
+++ b/final_project/art_project/app/views/users/index.html.erb
@@ -12,13 +12,13 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.first_name%><%=" " %><%= user.last_name%></td>
+        <td><a href= ><%= user.first_name%><%=" " %><%= user.last_name%></a></td>
         <!-- <td><%= user.email%></td> -->
         
         <%# if user_signed_in? %>
           <!-- <td><%#= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %> -->
         <%# end%>
-        </td>
+       <!--  </td> -->
       </tr>
     <% end %>
   </tbody>
