--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 
 <!-- To send alerts when log in or log out sucessful -->
 <!-- Alert when user or password aren't on database -->
-<div class="notice"><%= flash[:notice] %></div>
-<div class="alert"><%= flash[:alert] %></div>
+<!-- <div class="notice"><%#= flash[:notice] %></div>
+<div class="alert"><%#= flash[:alert] %></div> -->
 
 <%= yield %>
 
