--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -39,7 +39,7 @@
         <td><%= event.event_type %></td>
         <!-- The show link can be see for everybody  -->
           <td><%= link_to 'Show', event %></td>
-        <!-- Only admin can modify events -->
+        <!-- Only admin can modify, destroy and create events. -->
         <% if can? :update, event %>
           <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <% end %>
@@ -54,8 +54,9 @@
 
 <br>
 
- <%# if user_signed_in? %>
-  <%= link_to 'New Event', new_event_path %>
+ <% if can? :create, @events %>
+   <%= link_to 'New Event', new_event_path %>
+  <% end %>
   <%#= link_to 'Modify users', users_path %>
  <%# end %>
  <%= link_to 'List of artists', users_path %>
