--- a/final_project/art_project/app/views/events/show.html.erb
+++ b/final_project/art_project/app/views/events/show.html.erb
@@ -40,5 +40,7 @@
   <%= @event.event_type %>
 </p>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
+  <% if current_user.present? and current_user.admin? %>
+    <%= link_to 'Edit', edit_event_path(@event) %>
+  <% end %>
 <%= link_to 'Back', events_path %>
