--- a/final_project/art_project/app/views/posts/_form.html.erb
+++ b/final_project/art_project/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for([@user,@post]) do |f| %>
+<%= form_for(@post) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -33,3 +33,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+<%#= link_to 'Back', user_post_path(@user) %>
