--- a/final_project/art_project/app/views/users/index.html.erb
+++ b/final_project/art_project/app/views/users/index.html.erb
@@ -16,17 +16,19 @@
         <!-- <td><%= user.email%></td> -->
         <!-- Only for user authorization -->
         <% if current_user.present? and current_user.admin? %>
-          <td><%= link_to 'New User', new_user_path %></td>
           <td><%= link_to 'Edit', edit_user_path(user) %></td>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %>
-          </td>
+        <% end %>
+         <% if current_user.present? and current_user.admin? %>
+          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %></td>
         <% end%>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%#= link_to 'New',  new_user_registration_path%>
+<% if current_user.present? and current_user.admin? %>
+  <%= link_to 'New User', new_user_path %> |
+<% end %>
 <%= link_to 'Back', events_path%>
 
 <br>
