--- a/final_project/art_project/app/views/posts/_form.html.erb
+++ b/final_project/art_project/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(@post) do |f| %>
+<%= form_for([@user,@post])do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -21,10 +21,10 @@
     <%= f.file_field :image %>
   </div>
   
-  <div class="field">
+ <!--  <div class="field">
     <%= f.label :author %><br>
     <%= f.text_field :author %>
-  </div>
+  </div> -->
   <div class="field">
     <%= f.label :content %><br>
     <%= f.text_area :content %>
