--- a/final_project/art_project/app/views/posts/index.html.erb
+++ b/final_project/art_project/app/views/posts/index.html.erb
@@ -14,20 +14,30 @@
   </thead>
 
   <tbody>
+  <!-- If there are posts created, show the posts -->
+  <% if @posts.present? %>
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
         <td><img src='<%= post.image_url(:thumb) %>'></td>
         <td><%= post.author %></td>
         <td><%= post.content %></td>
-        <td><%= link_to 'Show', user_post_path(@user, post)%></td>
-        <td><%= link_to 'Edit', edit_user_post_path(@user, post) %></td>
-        <td><%= link_to 'Destroy', [@user, post], confirm: 'Are you sure?', method: :delete%></td>
+        <%if current_user.present? && current_user.admin?%>
+          <td><%= link_to 'Show', user_post_path(@user, post)%></td>
+        <% end %>
+        <%if current_user.present? && current_user.admin?%>
+          <td><%= link_to 'Edit', edit_user_post_path(@user, post) %></td>
+        <% end %>
+        <%if current_user.present? && current_user.admin?%>
+          <td><%= link_to 'Destroy', [@user, post], confirm: 'Are you sure?', method: :delete%></td>
+        <% end %>
       </tr>
     <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
 <%= link_to 'New Post', new_user_post_path(@user)%>
+
