--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Author:</strong>
-  <%= @post.author %>
+  <%= current_user.first_name + ' '+current_user.last_name %> 
 </p>
 
 <p>
@@ -20,6 +20,10 @@
   <%= @post.content %>
 </p>
 
-<%= link_to 'Edit', edit_user_post_path(@user,@post) %> |
+<!-- Only logged user(artist) can modify the posts. The admin can't modify it-->
+<!-- Admin can delete posts only -->
+<% if current_user.present? && !current_user.admin?%>
+	<%= link_to 'Edit', edit_user_post_path(@user,@post) %> |
+<% end %>
 <%= link_to 'Back', user_posts_path(@user) %>
 
