--- a/final_project/art_project/app/views/posts/edit.html.erb
+++ b/final_project/art_project/app/views/posts/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<%#= link_to 'Show', user_post%>
+
+
+<%= link_to 'Back', user_posts_path %>
