--- a/final_project/art_project/app/views/posts/index.html.erb
+++ b/final_project/art_project/app/views/posts/index.html.erb
@@ -29,7 +29,7 @@
           <td><%= link_to 'Edit', edit_user_post_path(@user, post) %></td>
         <% end %>
         <%if current_user.present? && current_user.admin?%>
-          <td><%= link_to 'Destroy', [@user, post], confirm: 'Are you sure?', method: :delete%></td>
+          <td><%= link_to 'Destroy', [@user, post], { data: { confirm: 'Are you sure?' }, method: :delete} %></td>
         <% end %>
       </tr>
     <% end %>
