--- a/final_project/art_project/app/views/users/show.html.erb
+++ b/final_project/art_project/app/views/users/show.html.erb
@@ -1,12 +1,14 @@
 
-	<h1><%= @user.first_name%><spam><%= @user.last_name%></spam></h1>
+	<h1><%= @user.first_name + @user.last_name%></h1>
 
 	<p>Contact email: <%=@user.email%></p>
-	<p>Description of artist: FALTA(Migration doesn't work)</p>
+	<p>Description of artist: FALTA</p>
 
 	<% if current_user.present? && current_user.admin?%>
 		
 		<a href='/users/<%=@user.id%>/posts/new'>Create new post</a>
-		
+		<%#= link_to 'Create post', user_posts_path %> 
+		<%#= link_to 'List of posts', new_user_post_path %> 
+		<a href='/users/<%=@user.id%>/posts'>List of posts</a>
 	<% end %>
 	
