--- a/final_project/art_project/app/views/posts/index.html.erb
+++ b/final_project/art_project/app/views/posts/index.html.erb
@@ -1,43 +1,45 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Image</th>
-      <th>Author</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-  <!-- If there are posts created, show the posts -->
-  <% if @posts.present? %>
-    <% @posts.each do |post| %>
+ <!-- If there are posts created, show the posts -->
+<% if @posts.present? %>
+  <table>
+    <thead>
       <tr>
-        <td><%= post.title %></td>
-        <td><img src='<%= post.image_url(:thumb) %>'></td>
-        <td><%= post.author %></td>
-        <td><%= post.content %></td>
-        <%if current_user.present? && current_user.admin?%>
-          <td><%= link_to 'Show', user_post_path(@user, post)%></td>
-        <% end %>
-        <%if current_user.present? && current_user.admin?%>
-          <td><%= link_to 'Edit', edit_user_post_path(@user, post) %></td>
-        <% end %>
-        <%if current_user.present? && current_user.admin?%>
-          <td><%= link_to 'Destroy', [@user, post], { data: { confirm: 'Are you sure?' }, method: :delete} %></td>
-        <% end %>
+        <th>Title</th>
+        <th>Image</th>
+        <th>Author</th>
+        <!-- <th>Content</th> -->
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td><a href='/users/<%=@user.id%>/posts/<%=post.id%>'><%= post.title %></td>
+          <td><img src='<%= post.image_url(:thumb) %>'></td>
+          <td><%= @user.first_name+@user.last_name %></td>
+          <!-- <td><%#= post.content %></td> -->
+          <%if current_user.present? && current_user.admin?%>
+            <td><%= link_to 'Show', user_post_path(@user, post)%></td>
+          <% end %>
+          <%if current_user.present? && current_user.admin?%>
+            <td><%= link_to 'Edit', edit_user_post_path(@user, post) %></td>
+          <% end %>
+          <%if current_user.present? && current_user.admin?%>
+            <td><%= link_to 'Destroy', [@user, post], { data: { confirm: 'Are you sure?' }, method: :delete} %></td>
+        <% end%>
+         </tr>
+      <% end%>
+    </tbody>
+  </table>
+
+<% else %>
+    <h4>This artist does not have any post available.</h4>
+<%end%>
 <br>
-
-<%= link_to 'New Post', new_user_post_path(@user)%>
+<%if current_user.present? && current_user.admin?%>
+  <%= link_to 'New Post', new_user_post_path(@user)%>
+<% end %>
 
