--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -1,29 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+	<p>
+	  <strong>Title:</strong>
+	  <%= @post.title %>
+	</p>
 
-<p>
-  <strong>Image:</strong>
-  <img src='<%= @post.image_url(:thumb) %>'>
-</p>
+	<p>
+	  <strong>Image:</strong>
+	  <img src='<%= @post.image_url(:thumb) %>'>
+	</p>
 
-<p>
-  <strong>Author:</strong>
-  <%= current_user.first_name + ' ' +current_user.last_name %> 
-</p>
+	<p>
+	  <strong>Author:</strong>
+	  <%=@post.author %> 
+	</p>
 
-<p>
-  <strong>Content:</strong>
-  <%= @post.content %>
-</p>
+	<p>
+	  <strong>Content:</strong>
+	  <%= @post.content %>
+	</p>
+
 
 <!-- Only logged user(artist) can modify the posts. The admin can't modify it-->
 <!-- Admin can delete posts only -->
-<% if current_user.present? && !current_user.admin?%>
-	<%= link_to 'Edit', edit_user_post_path(@user,@post) %> |
+<% if current_user.present? && current_user.admin?%>
+	<%= link_to 'Edit', edit_user_post_path(@user,@post) %>
 <% end %>
+
 <%= link_to 'Back', user_posts_path(@user) %>
 
