--- a/final_project/art_project/app/views/users/show.html.erb
+++ b/final_project/art_project/app/views/users/show.html.erb
@@ -10,5 +10,6 @@
 		<%#= link_to 'Create post', user_posts_path %> 
 		<%#= link_to 'List of posts', new_user_post_path %>
 	<% end %>
-	<a href='/users/<%=@user.id%>/posts'>List of posts</a>
+	<a href='/users/<%=@user.id%>/posts'>List of posts</a>|
+	<a href='/users'>Back</a>
 	
