Sign_up removed from user model

--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<a href='/'>Home</a>
 <!-- To send alerts when log in or log out sucessful -->
 <!-- Alert when user or password aren't on database -->
 <!-- <div class="notice"><%#= flash[:notice] %></div>
