--- a/final_project/art_project/app/views/devise/registrations/new.html.erb
+++ b/final_project/art_project/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
     
-    <br><%= f.submit "Sign up" %>
+    <br><%#= f.submit "Sign up" %>
   </div>
 <% end %>
 
