--- a/final_project/art_project/app/views/users/show.html.erb
+++ b/final_project/art_project/app/views/users/show.html.erb
@@ -4,12 +4,12 @@
 	<p>Contact email: <%=@user.email%></p>
 	<p>Description of artist: FALTA</p>
 
-	<% if current_user.present? && current_user.admin?%>
-		
+	<%if current_user.present? && current_user.id==@user.id && !current_user.admin%>
 		<a href='/users/<%=@user.id%>/posts/new'>Create new post</a>
+    <% end %>
 		<%#= link_to 'Create post', user_posts_path %> 
 		<%#= link_to 'List of posts', new_user_post_path %>
-	<% end %>
+	
 	<a href='/users/<%=@user.id%>/posts'>List of posts</a>|
 	<a href='/users'>Back</a>
 	
