--- a/final_project/art_project/app/views/users/_form.html.erb
+++ b/final_project/art_project/app/views/users/_form.html.erb
@@ -1,3 +1,11 @@
+<% if @user.errors.any? %>
+  <ul>
+    <% @user.errors.full_messages.each do |err| %>
+      <li><%= err %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @user do |f| %>
 
   <div class="field">
@@ -25,7 +33,8 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+
+  <button type='submit'>Create user</button>
    
 <% end %>
 
-<%= render "devise/shared/links" %>
