--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -19,12 +19,38 @@
 	  <strong>Content:</strong>
 	  <%= @post.content %>
 	</p>
-
+	
+	<!-- Show on same page the comment added by the public. -->
+	<h3>Comments:</h3>
+	<% @post.comments.each do |comment| %>
+   
+  <strong>created on:</strong><%= comment.created_at%><br>
+  
+  <strong>Commenter:</strong><spam><%= comment.commenter %><spam><br>
+   <strong>Text:</strong><%= comment.body %><br>
+ 
+  <% end%>
+<!--The form_for call here uses an array -->
+	
+	<h4>Add a comment:</h4>
+		<%= form_for([@post, @post.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
 
 <!-- Only logged user(artist) can modify the posts. The admin can't modify it-->
 <!-- Admin can delete posts only -->
-<% if current_user.present? && current_user.admin?%>
-	<%= link_to 'Edit', edit_user_post_path(@user,@post) %>
+<% if current_user.present? %>
+	<%= link_to 'Edit', edit_user_post_path(@user,@post) %>|
 <% end %>
 
 <%= link_to 'Back', user_posts_path(@user) %>
