Createdt static pages on project

--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -8,6 +8,9 @@
   <%= link_to 'Log in',  user_session_path %>
 <% end %><br>
 
+<%= link_to 'List of artists', users_path %>
+<%= link_to 'Events', events_path %>
+
 <h1>Listing Events</h1>
 
 <table>
@@ -58,4 +61,4 @@
   <% end %>
   <%#= link_to 'Modify users', users_path %>
  <%# end %>
- <%= link_to 'List of artists', users_path %>
+ 
