--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -34,11 +34,11 @@
 	<h4>Add a comment:</h4>
 		<%= form_for([@post, @post.comments.build]) do |f| %>
   <p>
-    <%= f.label :commenter %><br>
+    <%= f.label :Name %><br>
     <%= f.text_field :commenter %>
   </p>
   <p>
-    <%= f.label :body %><br>
+    <%= f.label :Comment %><br>
     <%= f.text_area :body %>
   </p>
   <p>
