--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -7,7 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<a href='/'>Home</a>
+<header>
+	<%= link_to 'Home',href='/'%> |
+	<%= link_to 'Events', events_path %> |
+	<%= link_to 'Artists', users_path %> |
+	<%= link_to 'Posts', post_index_path %> |
+	<%= link_to 'Gallery', events_path %><br>
+
+</header>
+<!-- <a href='/'>Home</a> | -->
 <!-- To send alerts when log in or log out sucessful -->
 <!-- Alert when user or password aren't on database -->
 <!-- <div class="notice"><%#= flash[:notice] %></div>
