--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -8,11 +8,11 @@
       <th>Title</th>
       <th>Location</th>
       <th>Start date</th>
-      <th>Ends date</th>
+      <!-- <th>Ends date</th> -->
       <th>Image</th>
-      <th>Description</th>
-      <th>Organizer name</th>
-      <th>Event type</th>
+      <!-- <th>Description</th> -->
+      <!-- <th>Organizer name</th> -->
+      <!-- <th>Event type</th> -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,17 +20,17 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
-        <td><%= event.title %></td>
+        <td><a href="/events/<%=event.id%>"><%= event.title%></a></td>
         <td><%= event.location %></td>
-        <td><%= event.start_date %></td>
-        <td><%= event.ends_date %></td>
+        <td><%=event.start_date %></td>
+        <!-- <td><%#= event.ends_date %></td> -->
         <!-- Show image resized -->
         <td><img src='<%= event.image_url(:thumb) %>'></td>
-        <td><%= event.description %></td>
-        <td><%= event.organizer_name %></td>
-        <td><%= event.event_type %></td>
+        <!-- <td><%= event.description %></td> -->
+        <!-- <td><%= event.organizer_name %></td> -->
+        <!-- <td><%= event.event_type %></td> -->
         <!-- The show link can be see for everybody  -->
-          <td><%= link_to 'Show', event %></td>
+          <!-- <td><%#= link_to 'Show', event %></td> -->
         <!-- Only admin can modify, destroy and create events. -->
          <% if current_user.present? and current_user.admin? %>
           <td><%= link_to 'Edit', edit_event_path(event) %></td>
