Added description and load image to when creting user's form

--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -11,8 +11,17 @@
 	<%= link_to 'Home',href='/'%> |
 	<%= link_to 'Events', events_path %> |
 	<%= link_to 'Artists', users_path %> |
-	<%= link_to 'Posts', post_index_path %> |
+	<%= link_to 'Posts', hred='/' %> |
 	<%= link_to 'Gallery', events_path %><br>
+
+	<% if user_signed_in?%>
+  		<strong> Welcome<%= current_user.first_name%> <%=current_user.last_name%></strong>
+  		<%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %> 
+	<% else %>
+  		<strong>Welcome!</strong> 
+  		<%= link_to 'Log in',  user_session_path %>
+	<% end %><br>
+
 
 </header>
 <!-- <a href='/'>Home</a> | -->
