--- a/final_project/art_project/app/views/posts/index.html.erb
+++ b/final_project/art_project/app/views/posts/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= @user.first_name+@user.last_name %></td>
           <!-- <td><%#= post.content %></td> -->
           <%if current_user.present? && current_user.admin?%>
-            <td><%= link_to 'Show', user_post_path(@user, post)%></td>
+            <!-- <td><%#= link_to 'Show', user_post_path(@user, post)%></td> -->
             <td><%= link_to 'Edit', edit_user_post_path(@user, post) %></td>
             <td><%= link_to 'Destroy', [@user, post], { data: { confirm: 'Are you sure?' }, method: :delete} %></td>
         <% end%>
