--- a/final_project/art_project/app/views/users/_form.html.erb
+++ b/final_project/art_project/app/views/users/_form.html.erb
@@ -33,6 +33,16 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+  
+  <div class="field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
+  </div>
+
+  <div class="field">
+    <%= f.label :description %><br/>
+    <%= f.text_area :users_description, autofocus: true %>
+  </div>
 
   <button type='submit'>Create user</button>
    
