--- a/final_project/art_project/app/views/users/show.html.erb
+++ b/final_project/art_project/app/views/users/show.html.erb
@@ -1,8 +1,9 @@
 
 	<h1><%= @user.first_name + @user.last_name%></h1>
 
-	<p>Contact email: <%=@user.email%></p>
-	<p>Description of artist: FALTA</p>
+	<p>Contact email:<strong><%=@user.email%></strong></p>
+	<p>Description of artist:</p>
+	<strong><%=@user.users_description%></strong><br><br>
 
 	<%if current_user.present? && current_user.id==@user.id && !current_user.admin%>
 		<a href='/users/<%=@user.id%>/posts/new'>Create new post</a>
