added image to user page

--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 <header>
 	<%= link_to 'Home',href='/'%> |
-	<%= link_to 'About',href='/'%> |
+	<%= link_to 'About',href='/pages/about'%> |
 	<%= link_to 'Events', events_path %> |
 	<%= link_to 'Artists', users_path %> |
 	<%= link_to 'Posts', hred='/' %> |
