--- a/final_project/art_project/app/views/users/_form.html.erb
+++ b/final_project/art_project/app/views/users/_form.html.erb
@@ -44,7 +44,7 @@
     <%= f.text_area :users_description, autofocus: true %>
   </div>
 
-  <button type='submit'>Create user</button>
+  <button type='submit'>Submit</button>
    
 <% end %>
 
