--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -2,47 +2,45 @@
 
 <h1>Listing Events</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Location</th>
-      <th>Start date</th>
-      <!-- <th>Ends date</th> -->
-      <th>Image</th>
-      <!-- <th>Description</th> -->
-      <!-- <th>Organizer name</th> -->
-      <!-- <th>Event type</th> -->
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
+ <% if @events.count>0 %>
+  <table>
+    <thead>
       <tr>
-        <td><a href="/events/<%=event.id%>"><%= event.title%></a></td>
-        <td><%= event.location %></td>
-        <td><%=event.start_date %></td>
-        <!-- <td><%#= event.ends_date %></td> -->
-        <!-- Show image resized -->
-        <td><img src='<%= event.image_url(:thumb) %>'></td>
-        <!-- <td><%= event.description %></td> -->
-        <!-- <td><%= event.organizer_name %></td> -->
-        <!-- <td><%= event.event_type %></td> -->
-        <!-- The show link can be see for everybody  -->
-          <!-- <td><%#= link_to 'Show', event %></td> -->
-        <!-- Only admin can modify, destroy and create events. -->
-         <% if current_user.present? and current_user.admin? %>
-          <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <%# end %>
-          <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <% end%>
-        </td>
+        <th>Title</th>
+        <th>Location</th>
+        <th>Start date</th>
+        <!-- <th>Ends date</th> -->
+        <th>Image</th>
+        <!-- <th>Description</th> -->
+        <!-- <th>Organizer name</th> -->
+        <!-- <th>Event type</th> -->
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+        <% @events.each do |event| %>
+          <tr>
+            <td><a href="/events/<%=event.id%>"><%= event.title%></a></td>
+            <td><%= event.location %></td>
+            <td><%=event.start_date %></td>
+            <!-- <td><%#= event.ends_date %></td> -->
+            <!-- Show image resized -->
+            <td><img src='<%= event.image_url(:thumb) %>'></td>
+          <% if current_user.present? and current_user.admin? %>
+             <td> <%= link_to 'Edit', edit_event_path(event) %></td>
+            <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+      <% end %>
+        </tr>
+    </tbody>
+  </table>  
+    <% else%>
+      <p>Sorry, there are not events at this moment.</p>
+        <!-- Only admin can modify, destroy and create events. -->
+    <% end %>
+
+        
 <br>
 
  <% if current_user.present? and current_user.admin? %>
