--- a/final_project/art_project/app/views/posts/index.html.erb
+++ b/final_project/art_project/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
       <tr>
         <th>Title</th>
         <th>Image</th>
-        <th>Author</th>
+        <!-- <th>Author</th> -->
         <!-- <th>Content</th> -->
         <th colspan="3"></th>
       </tr>
@@ -19,7 +19,7 @@
         <tr>
           <td><a href='/users/<%=@user.id%>/posts/<%=post.id%>'><%= post.title %></td>
           <td><img src='<%= post.image_url(:thumb) %>'></td>
-          <td><%= @user.first_name+@user.last_name %></td>
+          <!-- <td><%= @user.first_name+@user.last_name %></td> -->
           <!-- <td><%#= post.content %></td> -->
           <%if current_user.present? && current_user.admin?%>
             <!-- <td><%#= link_to 'Show', user_post_path(@user, post)%></td> -->
