--- a/final_project/art_project/app/views/users/index.html.erb
+++ b/final_project/art_project/app/views/users/index.html.erb
@@ -1,32 +1,35 @@
 
 <h1>List of artists:</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
+<%if @users.count>0%>
+  <table>
+    <thead>
       <tr>
-        
-        <td><a href=' /users/<%=user.id %>'><%= user.first_name+' '+user.last_name%></a></td>
-        <!-- <td><%= user.email%></td> -->
-        <!-- Only for user authorization -->
-        <% if current_user.present? and current_user.admin? %>
-          <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <% end %>
-         <% if current_user.present? and current_user.admin? %>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %></td>
-        <% end%>
-        <!-- <td><%#= link_to "User's post", posts_path%></td> -->
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          
+          <td><a href=' /users/<%=user.id %>'><%= user.first_name+' '+user.last_name%></a></td>
+          <!-- <td><%= user.email%></td> -->
+          <!-- Only for user authorization -->
+          <% if current_user.present? and current_user.admin? %>
+            <td><%= link_to 'Edit', edit_user_path(user) %></td>
+          <% end %>
+           <% if current_user.present? and current_user.admin? %>
+            <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure you want to remove user?' } %></td>
+          <% end%>
+          <!-- <td><%#= link_to "User's post", posts_path%></td> -->
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+<p>There are no artists to show at this moment</p>
+<% end %>
 
 <% if current_user.present? && current_user.admin? %>
 
