--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
 
 	<% if user_signed_in? && !current_user.admin?%>
-  		<strong> Welcome<%= current_user.first_name%> <%=current_user.last_name%></strong>
+  		<strong> Welcome <%= current_user.first_name+ ' ' +current_user.last_name%></strong>
   		<%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %> 
 	 <%elsif current_user.present? && current_user.admin?%>
 		<strong> Welcome Administrator!</strong>
