--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -1,18 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 	<p>
-	  <strong>Title:</strong>
-	  <%= @post.title %>
+	  <!-- <strong>Title:</strong> -->
+	  <h2><%= @post.title %></h2>
 	</p>
 
 	<p>
-	  <strong>Image:</strong>
+	  <!-- <strong>Image:</strong> -->
 	  <img src='<%= @post.image_url(:thumb) %>'>
 	</p>
 
 	<p>
 	  <strong>Author:</strong>
-	  <%=@post.author %> 
+	  <%= @user.first_name+ ' '+ @user.last_name%> 
 	</p>
 
 	<p>
