--- a/final_project/art_project/app/views/pages/home.html.erb
+++ b/final_project/art_project/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
 <!-- <p id="notice"><%= notice %></p> -->
-<h2>Home page</h2>
+<div class="center jumbotron">
+	<h2>Home page</h2>
+</div>
+
+<%= link_to image_tag("home_image.jpg", alt: "Home page logo"),
+            'http://google.com/' %>
 
 
