--- a/final_project/art_project/app/views/pages/home.html.erb
+++ b/final_project/art_project/app/views/pages/home.html.erb
@@ -3,7 +3,9 @@
 	<h2>Home page</h2>
 </div>
 
-<%= link_to image_tag("home_image.jpg", alt: "Home page logo"),
+<div class='home_image'>
+	<%= link_to image_tag("home_image.jpg", alt: "Home page logo"),
             'http://google.com/' %>
+</div>
 
 
