--- a/final_project/art_project/app/views/posts/index.html.erb
+++ b/final_project/art_project/app/views/posts/index.html.erb
@@ -17,9 +17,9 @@
     <tbody>
       <% @posts.each do |post| %>
         <tr>
-          <td><a href='/users/<%=@user.id%>/posts/<%=post.id%>'><%= post.title %></td>
+          <td><a href='/posts/<%=post.id%>'><%= post.title %></td>
           <td><img src='<%= post.image_url(:thumb) %>'></td>
-          <!-- <td><%= @user.first_name+@user.last_name %></td> -->
+          <!-- <td><%#= @user.first_name+@user.last_name %></td> -->
           <!-- <td><%#= post.content %></td> -->
           <%if current_user.present? && current_user.admin?%>
             <!-- <td><%#= link_to 'Show', user_post_path(@user, post)%></td> -->
@@ -33,8 +33,8 @@
 
 <% else %>
     <h4>This artist does not have any post available.</h4>
-<%end%>
+<% end%>
 <br>
  
-<a href='/users/<%=@user.id%>'>Back</a>
+<!-- <a href='/users/<%#=@user.id%>'>Back</a> -->
 
