--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<div id='container'>
 <body>
 <header class="navbar navbar-fixed-top navbar-inverse">
  <div class="container">
@@ -37,8 +38,9 @@
 <!-- Alert when user or password aren't on database -->
 <!-- <div class="notice"><%#= flash[:notice] %></div>
 <div class="alert"><%#= flash[:alert] %></div> -->
-<div id='content'>
+<div>
 	<%= yield %>
+</div>
 
 <footer>
 	<div class='vertical-center'>
@@ -48,4 +50,5 @@
 	</div>
 </footer>
 </body>
+</div>
 </html>
