--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 	<p>
 	  <strong>Author:</strong>
-	  <%= @user.first_name+ ' '+ @user.last_name%> 
+	  <%= @post.user.first_name+ ' '+ @post.user.last_name%> 
 	</p>
 
 	<p>
@@ -52,5 +52,5 @@
 	<%= link_to 'Edit', edit_user_post_path(@user,@post) %>|
 <% end %>
 
-<%= link_to 'Back', user_posts_path(@user) %>
+<%#= link_to 'Back', user_posts_path(@user) %>
 
