Validations on posts, users and events

--- a/final_project/art_project/app/assets/stylesheets/custom.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/custom.css.scss
@@ -72,15 +72,15 @@ p {
 }
 
 /* footer */
-footer {
-	background: #72CEC7;
-	width:100%;
-	height:70px;
-	// position:absolute;
-	bottom:0;
-	text-align: center;
+// footer {
+// 	background: #72CEC7;
+// 	width:100%;
+// 	height:70px;
+// 	// position:absolute;
+// 	bottom:0;
+// 	text-align: center;
 
-}
+// }
 .vertical-center{
 	padding-top:30px;
 }
