--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -42,13 +42,13 @@
 	<%= yield %>
 </div>
 
-<footer>
+<!-- <footer>
 	<div class='vertical-center'>
 		<spam>2015 ArtProject</spam>
 		<spam><i>Twitter logo</i></spam>
 		<spam><i>Facebook logo</i></spam>
 	</div>
-</footer>
+</footer> -->
 </body>
 </div>
 </html>
