--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 				<li><%= link_to 'About',href='/pages/about'%></li> 
 				<li><%= link_to 'Events', events_path %></li> 
 				<li><%= link_to 'Artists', users_path %></li> 
-				<li><%= link_to 'Posts', hred='/' %></li> 
+				<li><%= link_to 'Posts', hred='/posts' %></li> 
 				<li><%= link_to 'Gallery', events_path %></li>
 			</ul>
 		</nav>
