--- a/final_project/art_project/app/views/pages/home.html.erb
+++ b/final_project/art_project/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<!-- <p id="notice"><%= notice %></p> -->
+<p id="notice"><%= notice %></p>
 <div class="center jumbotron">
 	<h2>Home page</h2>
 </div>
