--- a/final_project/art_project/app/views/posts/index_all.html.erb
+++ b/final_project/art_project/app/views/posts/index_all.html.erb
@@ -1,20 +1,27 @@
-<%#if @posts.nil?%>
-	<!-- <p>Sorry, there are no posts at this moment.</p> -->
-<%#else %>
+
 <p id="notice"><%= notice %></p>
+<h3>Search by title,date and author</h3>
 
 <%= form_tag '/posts', :method => 'get',class: "navbar-form" do %>
 	<div class="input-append">
-    <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Posts" %>
+    <%= text_field_tag :search_title, params[:search_title ], class: "span2", placeholder: "Search Posts" %>
+    <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Author" %>
     <button class="btn" type="submit"><i class="icon-search">Search</i></button>
   </div>
 <% end %>
 
+
+
+
 <%counter=1%>
-<% @posts.each do |post| %>
+<% @posts_title.each do |post| %>
   <div class="post">
     <h4 class="post-title"><%=counter%>.<%= link_to post.title, post %></h4>
-    <h6 class="post-author">Author:<%= post.author %></h6>
+	<%if post.user%>
+    <h6 class="post-author">Author:<%=  post.user.first_name%></h6>
+  <% else %>
+  	<h6>Guest</h6>
+  <% end %>
     <%counter+=1%>
   </div>
 <% end %>
