--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -49,7 +49,7 @@
 <!-- Only logged user(artist) can modify the posts. The admin can't modify it-->
 <!-- Admin can delete posts only -->
 <% if current_user.present? %>
-	<%= link_to 'Edit', edit_user_post_path(@user,@post) %>|
+	<%#= link_to 'Edit', edit_user_post_path(@user,@post) %>|
 <% end %>
 
 <%#= link_to 'Back', user_posts_path(@user) %>
